Minor refactoring to the export endpoint
Merge branch 'refactor_export_cyclops' into 'main'

Reviewed by 
Approved by Approved-by: Max Thorén <c20mtn@cs.umu.se>

Description

Branch commits
* Removed unused code from tag

* Minor refactoring to the export endpoint